feat: implement characters search with pagination

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="character_films_label">Films</string>
     <string name="director_label">Director:</string>
     <string name="release_date_label">Release</string>
+    <string name="search_character_hint">Search Character</string>
 </resources>
