feat: implement loadStateAdapter(error handling)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="director_label">Director:</string>
     <string name="release_date_label">Release</string>
     <string name="search_character_hint">Search Character</string>
+    <string name="load_state_retry_btn">Retry</string>
 </resources>
